--- a/IB_Web/src/main/resources/static/registration/registration.html
+++ b/IB_Web/src/main/resources/static/registration/registration.html
@@ -4,6 +4,10 @@
             <label for="username">Username:</label>
             <input type="text" placeholder="username" class="form-control" id="username" name="username" ng-model="credentials.username"/>
         </div>
+         <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="text" placeholder="email" class="form-control" id="email" name="email" ng-model="credentials.email"/>
+        </div>
         <div class="form-group">
             <label for="password">Password:</label>
             <input type="password" placeholder="password" class="form-control" id="password" name="password" ng-model="credentials.password"/>
