--- a/IB_Web/src/main/resources/static/login/login.html
+++ b/IB_Web/src/main/resources/static/login/login.html
@@ -7,12 +7,14 @@
     <form role="form" ng-submit="login()" class="col-sm-6 col-lg-4">
         <div class="form-group">
             <label for="username">Username:</label>
-            <input type="text" placeholder="user/admin" class="form-control" id="username" name="username" ng-model="credentials.username"/>
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input type="text" placeholder="user/admin" class="form-control" style="background-color: teal ; color: black;" id="username" name="username" ng-model="credentials.username"/>
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" placeholder="123" class="form-control" id="password" name="password" ng-model="credentials.password"/>
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <input type="password" placeholder="123" class="form-control"  style="background-color: teal; color: black;" id="password" name="password" ng-model="credentials.password"/>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-info btn-lg" style="color: black;">Submit</button>
     </form>
 </div>
