--- a/IB_Web/src/main/resources/static/registration/registration.html
+++ b/IB_Web/src/main/resources/static/registration/registration.html
@@ -2,20 +2,20 @@
     <form role="form" ng-submit="registration()" class="col-sm-6 col-lg-4">
         <div class="form-group">
             <label for="username">Username:</label>
-            <input type="text" placeholder="username" class="form-control" id="username" name="username" ng-model="credentials.username"/>
+            <input type="text" placeholder="username" class="form-control"  style="background-color: teal; color: black;" id="username" name="username" ng-model="credentials.username"/>
         </div>
          <div class="form-group">
             <label for="email">Email:</label>
-            <input type="text" placeholder="email" class="form-control" id="email" name="email" ng-model="credentials.email"/>
+            <input type="text" placeholder="email" class="form-control"  style="background-color: teal; color: black;" id="email" name="email" ng-model="credentials.email"/>
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" placeholder="password" class="form-control" id="password" name="password" ng-model="credentials.password"/>
+            <input type="password" placeholder="password" class="form-control"  style="background-color: teal; color: black;" id="password" name="password" ng-model="credentials.password"/>
         </div>
          <div class="form-group">
             <label for="password">Repeat password:</label>
-            <input type="password" placeholder="repeat password" class="form-control" id="password" name="password" ng-model="credentials.password"/>
+            <input type="password" placeholder="repeat password" class="form-control"  style="background-color: teal; color: black;" id="password" name="password" ng-model="credentials.password"/>
         </div>
-        <button type="submit" class="btn btn-primary">Create my account</button>
+        <button type="submit" class="btn btn-info btn-lg" style="color: black;">Create my account</button>
     </form>
 </div>
